# ghost

./: Cargo.toml  Containerfile  Containerfile.static  Makefile  README.md
.github/workflows/: ci.yml  image.yml
src/: main.rs
