[package]
name = "ghost"
description = "echo server"
version = "0.1.0"
authors = ["Jose Thomas <jostho@gmail.com>"]
repository = "https://github.com/jostho/ghost"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
http = "0.2"
rand = "0.8"
clap = { version = "3.2", features = ["derive", "env"] }
pretty_env_logger = "0.4"
chrono = "0.4"
